recursion.cons.lessons.recursion.cons.Min.scala.error
min:5: error: reassignment to val
      list=list.tail
          ^min:6: error: value head_= is not a member of List[Int]
      list.head=x
           ^