recursion.cons.lessons.recursion.cons.Min.scala.code
def min(l:List[Int]): Int = {
  def compare(list:List[Int]):List[Int]={
    if(list.head<(list.tail).head){
      var x:Int=list.head
      list=list.tail
      list.head=x
    }
    return list
  }
  if(l.tail==Nil){
    return l.head
  }else{
    return(min(compare(l)))
  }
}